--- a/muk_web_theme/i18n/nl.po
+++ b/muk_web_theme/i18n/nl.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190128\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-01 10:05+0000\n"
-"PO-Revision-Date: 2019-03-01 10:05+0000\n"
+"POT-Creation-Date: 2019-03-01 10:06+0000\n"
+"PO-Revision-Date: 2019-03-01 10:06+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -69,12 +69,12 @@ msgstr ""
 #. module: muk_web_theme
 #: model:ir.model,name:muk_web_theme.model_res_company
 msgid "Companies"
-msgstr ""
+msgstr "Bedrijven"
 
 #. module: muk_web_theme
 #: model:ir.model,name:muk_web_theme.model_res_config_settings
 msgid "Config Settings"
-msgstr ""
+msgstr "Configuratie instellingen"
 
 #. module: muk_web_theme
 #: selection:res.users,sidebar_type:0
@@ -158,7 +158,7 @@ msgstr ""
 #. module: muk_web_theme
 #: model:ir.model,name:muk_web_theme.model_res_users
 msgid "Users"
-msgstr ""
+msgstr "Gebruikers"
 
 #. module: muk_web_theme
 #. openerp-web
