--- a/muk_web_utils/i18n/de.po
+++ b/muk_web_utils/i18n/de.po
@@ -7,13 +7,16 @@ msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190128\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-27 09:28+0000\n"
-"PO-Revision-Date: 2019-02-27 09:28+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-05-12 17:18+0000\n"
+"Last-Translator: Manuel Marklo <manuel.marklo@mukit.at>\n"
+"Language-Team: German <http://https://weblate.mukit.at/projects/web-12/"
+"muk_web_utils/de/>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.4\n"
 
 #. module: muk_web_utils
 #. openerp-web
@@ -163,7 +166,7 @@ msgstr "Konfiguration "
 #: code:addons/muk_web_utils/static/src/xml/share.xml:97
 #, python-format
 msgid "Download"
-msgstr ""
+msgstr "Herunterladen"
 
 #. module: muk_web_utils
 #. openerp-web
@@ -323,4 +326,3 @@ msgstr ""
 #, python-format
 msgid "shared a message with you!"
 msgstr ""
-
