--- a/muk_web_client/i18n/es.po
+++ b/muk_web_client/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190522\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-25 13:38+0000\n"
-"PO-Revision-Date: 2019-06-25 13:38+0000\n"
+"POT-Creation-Date: 2019-06-25 13:39+0000\n"
+"PO-Revision-Date: 2019-06-25 13:39+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
 msgid "<strong>Save</strong> this page and come back here to set up the feature."
-msgstr ""
+msgstr "Guarde esa página y regrese aquí para configurar la función."
 
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
@@ -28,7 +28,7 @@ msgstr ""
 #. module: muk_web_client
 #: model:ir.model,name:muk_web_client.model_res_config_settings
 msgid "Config Settings"
-msgstr ""
+msgstr "Opciones de Configuración"
 
 #. module: muk_web_client
 #: model_terms:ir.ui.view,arch_db:muk_web_client.res_config_settings_view_form
