--- a/muk_web_client_notification/i18n/fr.po
+++ b/muk_web_client_notification/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190522\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-25 13:43+0000\n"
-"PO-Revision-Date: 2019-06-25 13:43+0000\n"
+"POT-Creation-Date: 2019-06-25 13:44+0000\n"
+"PO-Revision-Date: 2019-06-25 13:44+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr ""
 #. module: muk_web_client_notification
 #: model_terms:ir.ui.view,arch_db:muk_web_client_notification.send_notifications_view_form
 msgid "Cancel"
-msgstr ""
+msgstr "Annuler"
 
 #. module: muk_web_client_notification
 #: code:addons/muk_web_client_notification/wizards/send_notifications.py:86
@@ -42,17 +42,17 @@ msgstr ""
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Créé par"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__create_date
 msgid "Created on"
-msgstr ""
+msgstr "Créé le"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nom affiché"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__id
@@ -79,17 +79,17 @@ msgstr ""
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Dernière modification le"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Dernière mise à jour par"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Dernière mise à jour le"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__message
@@ -120,7 +120,7 @@ msgstr ""
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__title
 msgid "Title"
-msgstr ""
+msgstr "Titre"
 
 #. module: muk_web_client_notification
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__type
@@ -131,7 +131,7 @@ msgstr ""
 #: model:ir.model,name:muk_web_client_notification.model_res_users
 #: model:ir.model.fields,field_description:muk_web_client_notification.field_muk_web_client_notification_send_notifications__user_ids
 msgid "Users"
-msgstr ""
+msgstr "Utilisateurs"
 
 #. module: muk_web_client_notification
 #: code:addons/muk_web_client_notification/models/res_users.py:61
