--- a/muk_web_theme/i18n/de.po
+++ b/muk_web_theme/i18n/de.po
@@ -7,41 +7,49 @@ msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190522\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-24 22:00+0000\n"
-"PO-Revision-Date: 2019-06-24 22:00+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-06-27 08:23+0000\n"
+"Last-Translator: MuK IT <admin@mukit.at>\n"
+"Language-Team: German <http://weblate.mukit.at/projects/web-12/muk_web_theme/"
+"de/>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.7\n"
 
 #. module: muk_web_theme
 #. openerp-web
 #: code:addons/muk_web_theme/static/src/xml/apps.xml:25
 #, python-format
 msgid "#menu_id=#{app.menuID}&action_id=#{app.actionID}"
-msgstr ""
+msgstr "#menu_id=#{app.menuID}&action_id=#{app.actionID}"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Background Image</span>\n"
 "                            <span class=\"fa fa-lg fa-building-o\" title=\"Values set here are company-specific.\" aria-label=\"Values set here are company-specific.\" groups=\"base.group_multi_company\" role=\"img\"/>"
 msgstr ""
+"<span class=\"o_form_label\">Hintergrundbild</span>\n"
+"                            <span class=\"fa fa-lg fa-building-o\" title=\""
+"Die hier eingestellten Werte sind unternehmensspezifisch.\" aria-label=\"Die "
+"hier eingestellten Werte sind unternehmensspezifisch.\" groups=\"base."
+"group_multi_company\" role=\"img\"/>"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Default Preferences</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Default-Einstellungen</span>"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Menu Colors</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Menüfarben</span>"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "<span class=\"o_form_label\">Theme Colors</span>"
-msgstr ""
+msgstr "<span class=\"o_form_label\">Themenfarben</span>"
 
 #. module: muk_web_theme
 #. openerp-web
@@ -56,23 +64,23 @@ msgstr "Aktionen"
 #: code:addons/muk_web_theme/static/src/xml/shortcuts.xml:31
 #, python-format
 msgid "Alt"
-msgstr ""
+msgstr "Alt"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Apps Blend"
-msgstr ""
+msgstr "Apps Mischung"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Apps Color"
-msgstr ""
+msgstr "Apps Farbe"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_company__background_blend_mode
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_background_blend_mode
 msgid "Apps Menu Background Blend Mode"
-msgstr ""
+msgstr "Apps Menü Hintergrund Mischmodus"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_company__background_image
@@ -88,7 +96,7 @@ msgstr "Backendmotiv"
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Background"
-msgstr ""
+msgstr "Hintergrund"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
@@ -98,29 +106,29 @@ msgstr "Markenzeichen"
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Chatter"
-msgstr ""
+msgstr "Klappern"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_company__default_chatter_preference
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_default_chatter_preference
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_users__chatter_position
 msgid "Chatter Position"
-msgstr ""
+msgstr "Klapperposition"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Color"
-msgstr ""
+msgstr "Farbe"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Color-burn"
-msgstr ""
+msgstr "Farbverbrennung"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Color-dodge"
-msgstr ""
+msgstr "Farbabweichung"
 
 #. module: muk_web_theme
 #: model:ir.model,name:muk_web_theme.model_res_company
@@ -137,7 +145,7 @@ msgstr "Konfiguration "
 #: code:addons/muk_web_theme/static/src/xml/shortcuts.xml:31
 #, python-format
 msgid "Control"
-msgstr ""
+msgstr "Kontrolle"
 
 #. module: muk_web_theme
 #. openerp-web
@@ -145,17 +153,17 @@ msgstr ""
 #: code:addons/muk_web_theme/static/src/xml/views.xml:68
 #, python-format
 msgid "Create"
-msgstr ""
+msgstr "Erstellen"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Darken"
-msgstr ""
+msgstr "Verdunkeln"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Difference"
-msgstr ""
+msgstr "Unterschied"
 
 #. module: muk_web_theme
 #. openerp-web
@@ -163,34 +171,34 @@ msgstr ""
 #: code:addons/muk_web_theme/static/src/xml/views.xml:82
 #, python-format
 msgid "Discard"
-msgstr ""
+msgstr "Verwerfen"
 
 #. module: muk_web_theme
 #. openerp-web
 #: code:addons/muk_web_theme/static/src/xml/views.xml:41
 #, python-format
 msgid "Edit"
-msgstr ""
+msgstr "Bearbeiten"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Exclusion"
-msgstr ""
+msgstr "Ausschluss"
 
 #. module: muk_web_theme
 #: model:ir.model,name:muk_web_theme.model_ir_http
 msgid "HTTP Routing"
-msgstr ""
+msgstr "HTTP-Routing"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Hard-light"
-msgstr ""
+msgstr "Hartes Licht"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Hue"
-msgstr ""
+msgstr "Farbton"
 
 #. module: muk_web_theme
 #: selection:res.company,default_sidebar_preference:0
@@ -207,41 +215,41 @@ msgstr "Groß"
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Lighten"
-msgstr ""
+msgstr "Aufhellen"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Luminosity"
-msgstr ""
+msgstr "Leuchtkraft"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Menu Color"
-msgstr ""
+msgstr "Menüfarbe"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Multiply"
-msgstr ""
+msgstr "Multiplizieren"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 #: selection:res.company,default_chatter_preference:0
 #: selection:res.users,chatter_position:0
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #. module: muk_web_theme
 #. openerp-web
 #: code:addons/muk_web_theme/static/src/xml/shortcuts.xml:26
 #, python-format
 msgid "Open the apps menu"
-msgstr ""
+msgstr "Öffnen Sie das App-Menü."
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Overlay"
-msgstr ""
+msgstr "Überlagerung"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
@@ -251,7 +259,7 @@ msgstr "Primär"
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Saturation"
-msgstr ""
+msgstr "Sättigung"
 
 #. module: muk_web_theme
 #. openerp-web
@@ -259,19 +267,19 @@ msgstr ""
 #: code:addons/muk_web_theme/static/src/xml/views.xml:75
 #, python-format
 msgid "Save"
-msgstr ""
+msgstr "Speichern"
 
 #. module: muk_web_theme
 #: selection:res.company,background_blend_mode:0
 msgid "Screen"
-msgstr ""
+msgstr "Bildschirm"
 
 #. module: muk_web_theme
 #. openerp-web
 #: code:addons/muk_web_theme/static/src/js/views/search_view.js:34
 #, python-format
 msgid "Search"
-msgstr ""
+msgstr "Suche"
 
 #. module: muk_web_theme
 #. openerp-web
@@ -288,12 +296,12 @@ msgstr "Setzt das Hintergrundbild für das App-Menü."
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Set the default theme preferences"
-msgstr ""
+msgstr "Legen Sie die Standardeinstellungen für das Design fest."
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Set the main menu colors"
-msgstr ""
+msgstr "Einstellen der Farben des Hauptmenüs"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
@@ -303,7 +311,7 @@ msgstr "Legen Sie die Farben des Hauptthemas fest"
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_config_settings_view_form
 msgid "Sidebar"
-msgstr ""
+msgstr "Sidebar"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_company__default_sidebar_preference
@@ -327,12 +335,12 @@ msgstr "Klein"
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_color_appbar_background
 msgid "Theme AppBar Background"
-msgstr ""
+msgstr "Thema AppBar Hintergrund"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_color_appbar_color
 msgid "Theme AppBar Color"
-msgstr ""
+msgstr "Thema AppBar Farbe"
 
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_color_brand
@@ -342,7 +350,7 @@ msgstr "Motiv Markenfarbe"
 #. module: muk_web_theme
 #: model:ir.model.fields,field_description:muk_web_theme.field_res_config_settings__theme_color_menu
 msgid "Theme Menu Color"
-msgstr ""
+msgstr "Themenmenü Farbe"
 
 #. module: muk_web_theme
 #: model_terms:ir.ui.view,arch_db:muk_web_theme.res_users_preferences
@@ -364,5 +372,4 @@ msgstr "Benutzer"
 #: code:addons/muk_web_theme/static/src/xml/apps.xml:31
 #, python-format
 msgid "fa fa-th"
-msgstr ""
-
+msgstr "fa fa fa-th"
