--- a/muk_web_preview/i18n/de.po
+++ b/muk_web_preview/i18n/de.po
@@ -7,27 +7,30 @@ msgstr ""
 "Project-Id-Version: Odoo Server 12.0-20190128\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-04 13:26+0000\n"
-"PO-Revision-Date: 2019-03-04 13:26+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2019-06-24 11:14+0000\n"
+"Last-Translator: Anonymous <translator@mukit.at>\n"
+"Language-Team: German <http://weblate.mukit.at/projects/web-12/"
+"muk_web_preview/de/>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.7\n"
 
 #. module: muk_web_preview
 #. openerp-web
 #: code:addons/muk_web_preview/static/src/xml/fields.xml:28
 #, python-format
 msgid "Clear"
-msgstr ""
+msgstr "Löschen"
 
 #. module: muk_web_preview
 #. openerp-web
 #: code:addons/muk_web_preview/static/src/xml/dialog.xml:30
 #, python-format
 msgid "Close"
-msgstr ""
+msgstr "Geschlossen"
 
 #. module: muk_web_preview
 #: model:ir.model,name:muk_web_preview.model_res_config_settings
@@ -40,97 +43,104 @@ msgstr "Konfiguration "
 #: code:addons/muk_web_preview/static/src/xml/content.xml:53
 #, python-format
 msgid "Download"
-msgstr ""
+msgstr "Herunterladen"
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support RTF files"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von RTF-Dateien."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_rtf
 msgid "Extendes the Preview Dialog to support RTF files."
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von RTF-Dateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support audio"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um Audio-Unterstützung."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_audio
 msgid "Extendes the Preview Dialog to support audio."
-msgstr ""
+msgstr "Erweitert das Vorschau-Dialogfeld um die Unterstützung von Audio."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support csv files"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von CSV-Dateien."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_csv
 msgid "Extendes the Preview Dialog to support csv files."
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von CSV-Dateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support image files"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von Bilddateien."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_image
 msgid "Extendes the Preview Dialog to support image files."
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von Bilddateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support mails"
-msgstr ""
+msgstr "Erweitert die Vorschau um E-Mails"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_mail
 msgid "Extendes the Preview Dialog to support mails."
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von Mails."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support markdown files"
 msgstr ""
+"Erweitert den Vorschau-Dialog um die Unterstützung von Abschriftendateien."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_markdown
 msgid "Extendes the Preview Dialog to support markdown files."
 msgstr ""
+"Erweitert den Vorschau-Dialog um die Unterstützung von Abschriftendateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support office files"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von Office-Dateien."
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_msoffice
 msgid "Extendes the Preview Dialog to support office files."
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von Office-Dateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support open document files"
 msgstr ""
+"Erweitert den Vorschau-Dialog um die Unterstützung von offenen "
+"Dokumentdateien"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_opendocument
 msgid "Extendes the Preview Dialog to support open document files."
 msgstr ""
+"Erweitert den Vorschau-Dialog um die Unterstützung von offenen "
+"Dokumentdateien."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support reStructuredText"
-msgstr ""
+msgstr "Erweitert den Vorschau-Dialog um die Unterstützung von reStructuredText"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_rst
 msgid "Extendes the Preview Dialog to support reStructuredText."
 msgstr ""
+"Erweitert den Vorschau-Dialog um die Unterstützung von reStructuredText."
 
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
@@ -155,7 +165,7 @@ msgstr ""
 #. module: muk_web_preview
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Extendes the Preview Dialog to support video files"
-msgstr ""
+msgstr "Erweitert die Vorschau um Videos"
 
 #. module: muk_web_preview
 #: model:ir.model.fields,help:muk_web_preview.field_res_config_settings__module_muk_web_preview_video
@@ -340,4 +350,3 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:muk_web_preview.res_config_settings_view_form
 msgid "Web Previews"
 msgstr ""
-
